# qdrant-examples

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: convert-notebooks.yaml  pre-commit.yaml  pull-request-notebooks.yaml
.scripts/: convert-all-notebooks-to-hugo-markdown.py  convert-notebook-to-hugo-markdown.py
.scripts/helpers/: git.py  markdown.py
again-new-notebook/: new-notebook.ipynb
new-notebook/: new-notebook.ipynb
test-notebook/: my-test-notebook.ipynb
